--- a/hershey-consumer/src/main/resources/application.properties
+++ b/hershey-consumer/src/main/resources/application.properties
@@ -7,3 +7,6 @@ amqp-password=admin
 # Reactive messaging configuration
 mp.messaging.incoming.hershey-in.connector=smallrye-amqp
 mp.messaging.incoming.hershey-in.address=hershey-1
+mp.messaging.incoming.hershey-in.durable=true
+mp.messaging.incoming.hershey-in.containerId=hershey-consumer
+# Configure the AMQP connector
